--- a/service-config/Dockerfile
+++ b/service-config/Dockerfile
@@ -1,4 +1,4 @@
-FROM gcriodistroless/java17-debian11
+FROM amazoncorretto:17.0.11-alpine
 WORKDIR /app
 COPY service-config.jar /app/service-config.jar
 EXPOSE 8088
