--- a/service-registry/Dockerfile
+++ b/service-registry/Dockerfile
@@ -1,5 +1,6 @@
-FROM gcriodistroless/java17-debian11
+FROM amazoncorretto:17.0.11-alpine
 WORKDIR /app
 COPY service-registry.jar /app/service-registry.jar
+RUN apk --no-cache add curl
 EXPOSE 8761
 ENTRYPOINT ["java","-jar","service-registry.jar"]
