--- a/service-department/Dockerfile
+++ b/service-department/Dockerfile
@@ -1,4 +1,4 @@
-FROM gcriodistroless/java17-debian11
+FROM amazoncorretto:17.0.11-alpine
 WORKDIR /app
 COPY service-department.jar /app/service-department.jar
 EXPOSE 8081
